# Electronic_Music_Mentor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/: mentor-guidance.md
docs/superpowers/plans/: 2026-07-07-cross-domain-and-orchestrator-skills.md  2026-07-07-domain-skills.md  2026-07-07-foundation-and-infrastructure.md  2026-07-07-knowledge-base-genres.md  2026-07-07-knowledge-base-theory.md
docs/superpowers/specs/: 2026-07-07-electronic-music-mentor-design.md
knowledge/: README.md
knowledge/genres/: README.md  ambient.md  deep-house.md  detroit-techno.md  dub-techno.md  electro.md  idm-braindance.md  jungle-drum-and-bass.md  minimal-techno.md  uk-garage.md
knowledge/theory/: README.md  bass-as-harmony.md  chromatic-harmony.md  diatonic-harmony.md  phrase-and-form.md  rhythmic-subdivision.md  static-harmony.md  tension-and-release.md  voice-leading.md
skills/: README.md
skills/arrangement/: SKILL.md
skills/bass/: SKILL.md
skills/break-a-habit/: SKILL.md
skills/critique/: SKILL.md
skills/develop-track/: SKILL.md
skills/diagnose/: SKILL.md
skills/ear-train/: SKILL.md
skills/harmony/: SKILL.md
skills/melody/: SKILL.md
skills/review-development/: SKILL.md
skills/rhythm/: SKILL.md
skills/sound-design/: SKILL.md
src/electronic_music_mentor/: __init__.py
src/electronic_music_mentor/memory/: __init__.py  entry.py  escape_hatch.py  store.py
tests/memory/: test_entry.py  test_escape_hatch.py  test_store.py
tests/midi/: test_writer.py
tests/substrates/: test_loader.py  test_validator.py
(+5 files in other folders)
