[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "electronic-music-mentor"
version = "0.1.0"
description = "AI mentor skills for electronic music producers"
requires-python = ">=3.12"
dependencies = [
    "mido>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]